# repo-goalie

./: .gitignore  README.md  pyproject.toml
.github/workflows/: generate_readme.yml  write-me.yml
goalie/: __init__.py  main.py
goalie/cli/commands/: __init__.py  analyse_code.py  ask_ai.py  farewell.py  greet.py  write_me.py
goalie/github/: github.py
problems/1-easy/1-Two-Sum/: README.md  solution.cpp  solution.java  solution.py
problems/1-easy/121-Best-Time-To-Buy-And-Sell-Stock/: solution.py
problems/1-easy/125-Valid-Palindrome/: solution.cpp  solution.java
problems/1-easy/20-Valid-Parentheses/: solution.java  solution.py
problems/1-easy/217-Contains-Duplicate/: README.md  solution.py
problems/1-easy/242-Valid-Anagram/: README.md  solution.cpp
problems/2-medium/11-Container-With-Most-Water/: README.md  solution.cpp  solution.java
problems/2-medium/128-Longest-Consecutive-Sequence/: README.md
problems/2-medium/15-3Sum/: solution.cpp  solution.java
problems/2-medium/150-Evaluate-Reverse-Polish-Notation/: solution.java
problems/2-medium/167-Two-Sum-II-Input-Array-Is-Sorted/: README.md  solution.cpp  solution.java  solution.py
problems/2-medium/238-Product-Of-Array-Except-Self/: README.md  solution.cpp  solution.java  solution.py
problems/2-medium/3-Longest-Substring-Without-Repeating-Characters/: solution.py
problems/2-medium/424-Longest-Repeating-Character-Replacement/: README.md  solution.py
problems/2-medium/49-Group-Anagrams/: solution.cpp  solution.java
repo_goalie.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+40 files in other folders)
